# media-vault

./: .gitignore  .secrets  Cargo.toml  Dockerfile  Dockerfile.ARM  README.md  build_sh  config.env.example  config.yaml  config_example.yaml  docker-compose.yml  pull-and-run.sh  run.sh  run_example.sh  rustfmt.toml
.github/workflows/: build-and-test.yaml  deploy.yaml  rust.yaml
config/: config.yaml.example
docker/: Dockerfile
docs/: chain.md  chain_0.2.md  chain_0.3.md  deploy.md
scripts/: build_example.sh  run_example.sh
src/: compressor.rs  config.rs  files.rs  logger.rs  logging.rs  main.rs  node.rs
