[package]
name = "media-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19.0"
regex = "1.10.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
simplelog = "0.12.2"
thiserror = "1.0.63"
